--- a/bootstrap/css/custom.css
+++ b/bootstrap/css/custom.css
@@ -1,3 +1,11 @@
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 15px;
+}
+
 body {
   font-family: 'Ubuntu', sans-serif;
 }
@@ -46,22 +54,37 @@ body {
 }
 
 .total_price {
-  background-color: #f8eb0d;
-  color: #333;
+  background-color:#6C757D;
+  color: #FFFFFF;
+  font-size: 14px;
   padding: 10px 20px;
   font-weight: 700;
   text-transform: uppercase;
   border-radius: 0.5rem;
   border: none;
   width: 20rem;
-  height: 4rem;
+  height: 5rem;
   margin-bottom: 2rem;
-  font-size: 2rem;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 
+@media only screen and (min-width: 600px) {
 
+  html {
+    font-size: 18px;
+  }
+  .total_price h6 {
+      font-size: 2rem;
+  }
+}
+
+@media only screen and (min-width: 991px) {
+
+  .col-lg-2 {
+    max-width: none;
+  }
+}
 
